Pick from #6867 b3564f0e